--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
+    <link rel = "icon" href ="images/logo/telyhub.png" type = "image/x-icon">
 <title>TelyHub IT Park | Web Solutions at Tiruvannamalai</title>
+    
 <meta name="description" content="We provide Web Design, Web Development, Android Development, Graphic Design courses at Tiruvannnmalai. We also create websites and softwares at cheap price">
 <meta name="keywords" content="IT company, Software company, Website and App Developemt, Internships, Tiruvannamalai, Coaching center, Designing">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
