--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="col-md-4">
                 <div class="info-box">
-                    <div class="info-title">SEO optiomization</div>
+                    <div class="info-title">SEO optimization</div>
                     <div class="info-details"><p>We assure you that SEO optimization content will make you rank better on search engines</p></div>
                 </div>
             </div>
