--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-md-4">
                 <div class="info-box">
                     <div class="info-title">SEO Optimization</div>
-                    <div class="info-details"><p>We assure you that SEO optimization content will make you rank better on search engines</p></div>
+                    <div class="info-details"><p>We assure you that SEO Optimized content will make you rank better on search engines</p></div>
                 </div>
             </div>
             <div class="col-md-4">
