--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="col-sm-6 col-md-6">
                 <div class="cliens-logo">
-                    <a href="#"><img src="images/clients/sa.jpg"></a>    
+                    <a href="#"><img src="images/clients/sa.png"></a>    
                 </div>
             </div>
         </div>
