--- a/index.html
+++ b/index.html
@@ -325,16 +325,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="col-md-6 col-md-offset-3">
                 <div class="row">
-            <div class="col-sm-6 col-md-6">
-                <div class="cliens-logo">
-                    <a href="#"><img src="images/clients/vt.png"></a>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-6">
-                <div class="cliens-logo">
-                    <a href="#"><img src="images/clients/sa.png"></a>    
-                </div>
-            </div>
+                    <div class="col-sm-6 col-md-6">
+                        <div class="cliens-logo">
+                            <a href="https://jaiindia.in/"><img src="images/clients/sa.png"></a>    
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6">
+                        <div class="cliens-logo">
+                            <a href="#"><img src="images/clients/vt.png"></a>
+                        </div>
+                    </div>
         </div>
             </div>
         </div>
@@ -391,7 +391,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="phone"><i class="fas fa-phone"></i><a href="tel:9080880219">+91 9080880219</a></div>
                     <div class="phone"><i class="fas fa-phone"></i><a href="tel:9655552901">+91 9655552901</a></div>
                     
-                    <div class="email"><i class="fas fa-envelope"></i><a href="mailto:telyhub@gmail.com" style="color: #fff;">telyhub@gmail.com</a></div>
+                    <div class="email"><i class="fas fa-envelope"></i><a href="mailto:info@telyhub.com" style="color: #fff;">info@telyhub.com</a></div>
                     
                 </div>
             </div>
