--- a/e-certificate.html
+++ b/e-certificate.html
@@ -298,8 +298,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <div id="skp_certificates" class="container">
     <div class="row-title">E-Certificates</div>
-    <div class="row-subtitle">Click on images to download your e-certificate</div>
-    <input class="form-control" id="myInput" type="text" placeholder="Search..">
+    <div class="row-subtitle">Click on image to download your e-certificate</div>
+    <input class="form-control" id="myInput" type="text" placeholder="Enter your name ..">
   <br>
     <div id="certificates" class="row">
         <div class="col-md-3 individual-certificate">
